<resources>
    <string name="app_name">Student Housing</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="list_of_houses">Houses Available</string>
    <string name="list_of_selected_houses">Selected Houses</string>

    <string name="secondary_title_main">Find your perfect residence!</string>

    <string name="filter">Filter</string>

    <string name="minprice">Minimum price</string>
    <string name="maxprice">Maximum price</string>

    <string name="area">Area</string>

    <string name="search">Search</string>
    <string name="selections">House list</string>
    <string name="profile">Profile</string>

    <string name="info">Info</string>

    <string name="username">Username</string>
    <string name="name">Full name</string>
    <string name="socialsecuritynumber">Social Security Number</string>
    <string name="email">Email</string>

    <string name="settings">Settings</string>

    <string name="changepassword">Change Password</string>

    <string name="logout">Log out</string>

    <string name="deleteaccount">Delete account</string>


    <string name="picture">Picture</string>

    <string name="title">Title:</string>

    <string name="pricemonth">Price €/month:</string>

    <string name="owner">Owner:</string>

    <string name="description">Description:</string>

    <string name="features">Features:</string>

    <string name="address">Address</string>

    <string name="addhouse">Add house</string>

    <string name="addhousetolist">Add to list</string>

    <string name="ciutatvella">Add house</string>
    <string name="password">Password</string>
    <string name="house_card">House Information</string>

    <string-array name="bcnareas">
        <item>"Ciutat Vella"</item>
        <item>Eixample</item>
        <item>"Sants-Montjuïc"</item>
        <item>"Les Corts"</item>
        <item>"Sarrià-Sant Gervasi"</item>
        <item>"Gràcia"</item>
        <item>"Horta - Guinardó"</item>
        <item>"Nou Barris"</item>
        <item>"Sant Andreu"</item>
        <item>"Sant Martí"</item>
    </string-array>

    <string name="facebook_application_id" translatable="false">290663232598844</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb290663232598844</string>
    <string name="changeemail">Change email</string>
    <string name="h">Problem</string>


</resources>