<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/titleSectionId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="right"
        android:orientation="vertical">

        <TextView
            style="@style/titleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_gravity="center"


        android:layout_marginTop="70dp"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp">


        <TextView
            android:id="@+id/ownerHouseListId"
            style="@style/fontItemStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="left"
            android:hint="Username"
            android:paddingTop="5dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/titleHouseListId"
            style="@style/fontItemStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="left"
            android:hint="Full name"
            android:paddingTop="2dp"
            android:visibility="visible"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ownerHouseListId"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/priceHouseListId"
            style="@style/fontItemStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="left"
            android:hint="Email"
            android:paddingTop="2dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleHouseListId"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/ownerId"
            style="@style/fontItemStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="left"
            android:hint="Social Security Number"
            android:paddingTop="2dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/priceHouseListId"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/descriptionId"
            style="@style/fontItemStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="left"
            android:hint="Phone"
            android:paddingTop="2dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ownerId"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/settingsId"
            style="@style/fontItemStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="left"
            android:paddingTop="18dp"
            android:text="@string/settings"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionId"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="RtlCompat" />

        <View
            android:id="@+id/horizontalLine"
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_marginBottom="50dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/settingsId"

            />

        <Button
            android:onClick="changeEmail"
            android:id="@+id/changeEmail"
            style="@style/fontItemStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingTop="2dp"
            android:text="@string/changeemail"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/horizontalLine"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="RtlCompat" />

        <Button
            android:onClick="changePassword"
            android:id="@+id/changePasswordId"
            style="@style/fontItemStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingTop="2dp"
            android:text="@string/changepassword"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/changeEmail"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="RtlCompat" />

        <Button
            android:onClick="logOut"
            android:id="@+id/logOutId"
            style="@style/fontItemStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingTop="2dp"
            android:text="@string/logout"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/changePasswordId"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="RtlCompat" />

        <Button
            android:onClick="deleteAccount"
            android:id="@+id/deleteAccountId"
            style="@style/fontItemStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingTop="2dp"
            android:text="@string/deleteaccount"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logOutId"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="RtlCompat" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>

